samples/_failures_safe/1761470962_081087_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e99b793d.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_e99b793d.c:134:17: error: expected ‘,’ or ‘;’ at end of input
  134 |                 int v = graph->edges[i].dest
      |                 ^~~
./samples/SAFE/__tmp_e99b793d.c:134:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e99b793d.c:134:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e99b793d.c:134:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e99b793d.c:134:17: error: expected declaration or statement at end of input
